# Talk2Me

./: .gitignore  Gemini.py  Hyperbolic.py  OpenAI.py  Perplexity.py  README.md  connection.py  hume.py  pyproject.toml  requirements.txt  rxconfig.py  vapi.py
Talk2Me/: OpenAI.py  Talk2Me.py  server.py
Talk2Me/components/: interviewer.py  personas.py
