[tool.poetry]
name = "[tool-poetry-dependencies]"
version = "python = \">=3.10,<3.12\""
description = "uagents = \"*\""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "[tool"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"
requests = "^2.31.0"
langchain = "^0.2.11"
openai = "^1.12.0"
langchain-openai = "^0.1.19"
tiktoken = "^0.7.0"
cohere = "^4.47"
faiss-cpu = "^1.7.4"
validators = "^0.22.0"
uagents-ai-engine = "^0.4.0"
unstructured = "^0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
